hphp/test/zend/good/Zend/tests/debug_info-error-empty_str.php.expectf

Fatal error: __debugInfo() must return an array in %s/debug_info-error-empty_str.php on line 14
